<resources>
    <string name="app_name">Hermex</string>
    <string name="tag_cucina">Cucina</string>
    <string name="tag_programmazione">Programmazione</string>
    <string name="titolo">Titolo</string>
    <string name="inserisci_il_titolo">Inserisci il titolo</string>
    <string name="aggiungi_foto">Aggiungi foto</string>
    <string name="descrizione">Descrizione</string>
    <string name="plus_sign">+</string>
    <string name="prezzo_minimo">Prezzo minimo</string>
    <string name="example_value_price">Es: 20</string>
    <string name="localizzazione">Località</string>
    <string name="es_milano">Es: Borgo Valsugana Est</string>
    <string name="scrivi_una_descrizione">Scrivi una descrizione</string>
    <string name="aggiungi_una_foto_al_tuo_servizio">Aggiungi una foto al tuo servizio</string>
    <string name="salva">Salva</string>
    <string name="vendita_servizio">Vendita servizio</string>
    <string name="aggiungi_una_tua_descrizione">Aggiungi una tua descrizione</string>
    <string name="pagamento">Pagamento</string>
    <string name="riscatta_il_tuo_certificato">Riscatta il tuo certificato</string>
    <string name="acquista_coin">Acquista coin</string>
    <string name="_1_coin_per_0_5_3_coin_per_1">1 coin per 0,5€\n3 coin per 1€</string>
    <string name="condividendo_il_tuo_codice_si_guadagnano_dei_coin">Condividendo il tuo codice si guadagnano dei coin</string>
    <string name="referral_code">Referral code</string>
    <string name="inserisci_annuncio_vendita_servizio">Inserisci annuncio / vendita servizio</string>
    <string name="guarda_ads">Guarda ads</string>
    <string name="guadagna_coin">Guadagna coin</string>
    <string name="edit">Modifica</string>
    <string name="back">Indietro</string>
    <string name="profile">Profilo</string>
    <string name="change_background">Cambia Profilo</string>
    <string name="display_name">TrentaELode</string>
    <string name="email">prova@gmail.com</string>
    <string name="password">**********</string>
    <string name="passwordlog">Password</string>
    <string name="log_out">Esci</string>
    <string name="delete_profile">Cancella profilo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, s\ne l do eiusmod...</string>
    <string name="service_title">Titolo del Servizio</string>
    <string name="image">Immagine</string>
    <string name="author_name">Nome dell\'autoru</string>
    <string name="_4_0">" 4.0"</string>
    <string name="buy">COMPRA</string>
    <string name="contact">CONTATTA</string>
    <string name="similar">Simili</string>
    <string name="search_for_services">Cerca per attività</string>
    <string name="home">Home</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="cerca">Cerca</string>
    <string name="guadagna">Guadagna</string>
    <string name="per_favore_inserisci_email_e_password">Per favore, inserisci email e password</string>
    <string name="login_effettuato_con_successo">Login effettuato con successo</string>
    <string name="crea_profilo">Crea Profilo</string>
    <string name="accedi">Accedi</string>
    <string name="categorie">Categorie</string>
    <string name="accetto_la_privacy_policy">Accetto la Privacy Policy</string>
    <string name="registrati">Registrati</string>
</resources>