<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Barra in alto aggiunta -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#979D9C"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:contentDescription="@string/aggiungi_una_tua_descrizione"
            android:src="@drawable/ic_arrow_back"
            android:tint="#FFFFFF"
            android:background="@drawable/button_border_white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vendita_servizio"
            android:textColor="#3D3F42"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/button_border_white_selector"
            android:text="@string/salva"
            android:textAllCaps="false"
            android:textColor="#263238"
            android:padding="12dp" />
    </LinearLayout>

    <!-- Contenuto originale (senza modifiche) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/titoloLabel"
            android:layout_height="wrap_content"
            android:text="@string/titolo"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content" />

        <EditText
            android:id="@+id/editTitolo"
            android:layout_width="0dp"
            android:background="@drawable/edittext_border_gray"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="488dp"
            android:hint="@string/inserisci_il_titolo"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titoloLabel" />

        <TextView
            android:id="@+id/fotoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_foto"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/editTitolo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:contentDescription="@string/aggiungi_una_foto_al_tuo_servizio"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintTop_toBottomOf="@id/fotoLabel"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descrizioneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descrizione"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imagePreview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editDescrizione"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="488dp"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:inputType="text"
            android:background="@drawable/edittext_border_gray"
            android:minHeight="100dp"
            android:hint="@string/scrivi_una_descrizione"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@id/descrizioneLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/tagContainer"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/editDescrizione"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:text="@string/tag_cucina"
                android:background="@drawable/edittext_border_gray"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/tag_programmazione"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/edittext_border_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_sign"
                android:background="@drawable/edittext_border_gray"
                android:textColor="#00796B" />
        </LinearLayout>

        <TextView
            android:id="@+id/prezzoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prezzo_minimo"
            app:layout_constraintTop_toBottomOf="@id/tagContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editPrezzo"
            android:layout_width="0dp"
            android:background="@drawable/edittext_border_gray"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="488dp"
            android:autofillHints="text"
            android:hint="@string/example_value_price"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prezzoLabel" />

        <TextView
            android:id="@+id/localizzazioneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localizzazione"
            app:layout_constraintTop_toBottomOf="@id/editPrezzo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editLocalizzazione"
            android:layout_width="0dp"
            android:background="@drawable/edittext_border_gray"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="488dp"
            android:autofillHints="postalAddress"
            android:hint="@string/es_milano"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/localizzazioneLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>